@@ -230,7 +230,7 @@ class Config(object):
                 "name": "Animation",
                 "code": "ANIM",
                 "path": "Sequences/{{sequence.code}}/Shots/{{version.base_name}}/{{type.code}}",
-                "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}",
+                "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}.{{version.extension}}",
                 "output_path": "{{version.path}}/OUTPUT/{{version.take_name}}",
                 "extra_folders": "",
                 "environments": ["Maya", "Houdini"],
@@ -240,7 +240,7 @@ class Config(object):
                 "name": "Camera",
                 "code": "CAMERA",
                 "path": "{{sequence.code}}/Shots/{{version.base_name}}/{{type.code}}",
-                "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}",
+                "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}.{{version.extension}}",
                 "output_path": "{{version.path}}/OUTPUT/{{version.take_name}}",
                 "extra_folders": "",
                 "environments": ["Maya", "Houdini"],
@@ -250,7 +250,7 @@ class Config(object):
                 "name": "Composition",
                 "code": "COMP",
                 "path": "{{sequence.code}}/Shots/{{version.base_name}}/{{type.code}}",
-                "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}",
+                "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}.{{version.extension}}",
                 "output_path": "{{version.path}}/OUTPUT/{{version.take_name}}",
                 "extra_folders": "",
                 "environments": ["Nuke"],
@@ -260,7 +260,7 @@ class Config(object):
                 "name": "Edit",
                 "code": "EDIT",
                 "path": "{{sequence.code}}/Shots/{{version.base_name}}/{{type.code}}",
-                "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}",
+                "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}.{{version.extension}}",
                 "output_path": "{{version.path}}/OUTPUT/{{version.take_name}}",
                 "extra_folders": "",
                 "environments": ["Nuke"],
@@ -270,7 +270,7 @@ class Config(object):
                 "name":"FX",
                 "code": "FX",
                 "path": "{{sequence.code}}/Shots/{{version.base_name}}/{{type.code}}",
-                "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}",
+                "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}.{{version.extension}}",
                 "output_path": "{{version.path}}/OUTPUT/{{version.take_name}}",
                 "extra_folders": """{{version.path}}/anim
                         {{version.path}}/cache
@@ -288,7 +288,7 @@ class Config(object):
                 "name":"Model",
                 "code": "MODEL",
                 "path": "Assets/{{version.base_name}}/{{type.code}}",
-                "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}",
+                "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}.{{version.extension}}",
                 "output_path": "{{version.path}}/OUTPUT/{{version.take_name}}",
                 "extra_folders": "",
                 "environments": ["Maya", "Houdini"],
@@ -298,7 +298,7 @@ class Config(object):
                 "name": "Other",
                 "code": "OTHER",
                 "path": "Others/{{version.base_name}}/{{type.code}}",
-                "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}",
+                "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}.{{version.extension}}",
                 "output_path": "{{version.path}}/OUTPUT/{{version.take_name}}",
                 "extra_folders": "",
                 "environments": ["Maya", "Houdini", "Nuke"],
@@ -308,7 +308,7 @@ class Config(object):
                 "name": "Previs",
                 "code": "PREVIS",
                 "path": "{{sequence.code}}/Shots/{{version.base_name}}/{{type.code}}",
-                "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}",
+                "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}.{{version.extension}}",
                 "output_path": "{{version.path}}/OUTPUT/{{version.take_name}}",
                 "extra_folders": "",
                 "environments": ["Maya", "Houdini"],
@@ -318,7 +318,7 @@ class Config(object):
                 "name": "Lighting",
                 "code": "LIGHTING",
                 "path": "{{sequence.code}}/Shots/{{version.base_name}}/{{type.code}}",
-                "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}",
+                "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}.{{version.extension}}",
                 "output_path": "{{version.path}}/OUTPUT/{{version.take_name}}",
                 "extra_folders": "",
                 "environments": ["Maya", "Houdini"],
@@ -328,7 +328,7 @@ class Config(object):
                 "name": "Rig",
                 "code": "RIG",
                 "path": "Assets/{{version.base_name}}/{{type.code}}",
-                "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}",
+                "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}.{{version.extension}}",
                 "output_path": "{{version.path}}/OUTPUT/{{version.take_name}}",
                 "extra_folders": "",
                 "environments": ["Maya", "Houdini"],
@@ -338,7 +338,7 @@ class Config(object):
                 "name": "Scene Assembly",
                 "code": "SCNASS",
                 "path":"{{sequence.code}}/Shots/{{version.base_name}}/{{type.code}}",
-                "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}",
+                "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}.{{version.extension}}",
                 "output_path": "{{version.path}}/OUTPUT/{{version.take_name}}",
                 "extra_folders": "",
                 "environments": ["Maya", "Houdini"],
@@ -348,7 +348,7 @@ class Config(object):
                 "name": "Matte Paint",
                 "code": "MATTE",
                 "path": "{{sequence.code}}/Shots/{{version.base_name}}/PAINTINGS/{{type.code}}",
-                "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}",
+                "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}.{{version.extension}}",
                 "output_path": "{{version.path}}/OUTPUT/{{version.take_name}}",
                 "extra_folders": "",
                 "environments": ["Photoshop"],
@@ -358,7 +358,7 @@ class Config(object):
                 "name": "Texture Paint",
                 "code": "TEXTURE",
                 "path": "Assets/{{version.base_name}}/PAINTINGS/{{type.code}}",
-                "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}",
+                "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}.{{version.extension}}",
                 "output_path": "{{version.path}}/OUTPUT/{{version.take_name}}",
                 "extra_folders": "",
                 "environments": ["Photoshop"],
@@ -368,7 +368,7 @@ class Config(object):
                 "name": "Illustration",
                 "code": "ILLUSTRATION",
                 "path": "Assets/{{version.base_name}}/PAINTINGS/{{type.code}}",
-                "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}",
+                "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}.{{version.extension}}",
                 "output_path": "{{version.path}}/OUTPUT/{{version.take_name}}",
                 "extra_folders": "",
                 "environments": ["Photoshop"],
@@ -378,7 +378,7 @@ class Config(object):
                 "name": "Shading",
                 "code": "SHADING",
                 "path": "Assets/{{version.base_name}}/{{type.code}}",
-                "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}",
+                "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}.{{version.extension}}",
                 "output_path": "{{version.path}}/OUTPUT/{{version.take_name}}",
                 "extra_folders": "",
                 "environments": ["Maya", "Houdini"],
@@ -388,7 +388,7 @@ class Config(object):
                 "name": "Tracking",
                 "code": "TRACK",
                 "path": "{{sequence.code}}/Shots/{{version.base_name}}/{{type.code}}",
-                "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}",
+                "filename": "{{version.base_name}}_{{version.take_name}}_{{type.code}}_v{{'%03d'|format(version.version_number)}}_{{version.created_by.initials}}.{{version.extension}}",
                 "output_path": "{{version.path}}/OUTPUT/{{version.take_name}}",
                 "extra_folders": "",
                 "environments": ["3DEqualizer"],
